fix double scroll bar issue

--- a/app/src/Components/ListPropertyPages/Page1.css
+++ b/app/src/Components/ListPropertyPages/Page1.css
@@ -1,12 +1,12 @@
 
 .create-a-property-2ne {
   border-radius: 6.4478rem;
-  box-shadow: 0 0.0321rem 0.1427rem rgba(0, 0, 0, 0.0421718433), 0 0.0772rem 0.343rem rgba(0, 0, 0, 0.0605839156), 0 0.1453rem 0.6459rem rgba(0, 0, 0, 0.075000003), 0 0.2592rem 1.1522rem rgba(0, 0, 0, 0.0894160867), 0 0.4849rem 2.155rem rgba(0, 0, 0, 0.1078281552), 0 1.1606rem 5.1582rem rgba(0, 0, 0, 0.150000006);
-  flex-shrink: 0;
+  display: flex;
+  width: 100%;
+  border: none;
+  flex-direction: column;
+  align-items: start;
   height: 102.9709rem;
-  margin-right: 5.0292rem;
-  position: relative;
-  width: 39.5249rem;
 
   .rectangle-13-cXt {
     background-color: #ffffff;
